Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,20 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p>&lt;!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "<a href="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd%22%3E">http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"&gt;</a>
-
-</p>
-
-<p>
-</p>ppse-offline
-
-
-<h1>
-<a id="download-ppse-offline" class="anchor" href="#download-ppse-offline" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-
-Download ppse-offline<h1></h1>
-
-</h1>
+      <p>Download ppse-offline</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/zengzhaoyang/ppseios">Ppseios</a> is maintained by <a href="https://github.com/zengzhaoyang">zengzhaoyang</a>.</span>
