Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <a id="ppse-offline" class="anchor" href="#ppse-offline" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ppse-offline</h3>
 
 <ul>
-<li><a href="http://www.baidu.com">Download ppse-offline</a></li>
+<li>Download ppse-offline</li>
 </ul>
 
       <footer class="site-footer">
